modification de la couleur de la barre de navigation

--- a/partiel/_header.ejs
+++ b/partiel/_header.ejs
@@ -1,6 +1,6 @@
 <!-- header -->
 <div>
-	<nav class="navbar navbar-expand-lg navbar-light" id="main_navbar" style="background-color: #e3f2fd;">
+	<nav class="navbar navbar-expand-lg navbar-light" id="main_navbar" style="background-color: #f7eb4b;">
 		<a class="navbar-brand" href="#">
 			Mamadou ZO
 		</a>
